styled the implemented RTE to look less ugly. Also added a menu bar and updated other colors to give the app more consistent, less-ugly design. Fixed unexpected overflows within the solo-entry modal

--- a/src/index.css
+++ b/src/index.css
@@ -5,3 +5,15 @@
     --color-bluesteel: #0e151e;
     --color-lightwheat: #ffd388;
 }
+
+/* remove outline */
+.ProseMirror:focus {
+    /*outline: none;*/
+}
+
+/* set */
+.ProseMirror {        
+min-height: 370px;
+max-height: 370px;
+overflow-y: auto;
+}
